# twitch-monitor

./: .gitignore  flows.py  latest.json  main.py  pyproject.toml  requirements.txt
config/: logger.py
detection/: __init__.py  detection_flow.py  detector.py
downloader/: __init__.py  download_flow.py  downloader.py
uploader/: __init__.py  upload_flow.py  uploader.py
utils/: __init__.py  clear_data.py  video_processor.py
